# ComfyUI-Workflow-Studio

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: themes.css
py/: config.py  wfm.py
py/nodes/: gallery_feeder_node.py  prompt_text.py
py/routes/: eagle_routes.py  gallery_routes.py  gmic_routes.py  models_routes.py  nodes_routes.py  ollama_routes.py  prompts_routes.py  settings_routes.py  tagger_routes.py  wildcard_routes.py  workflow_routes.py
py/services/: civitai_service.py  gallery_metadata.py  gallery_service.py  models_service.py  nodes_service.py  png_extractor.py  prompts_service.py  settings_service.py  tagger_db_service.py  tagger_service.py  wildcard_service.py  workflow_analyzer.py  workflow_service.py
static/css/: gallery-tab.css  image-edit-tab.css  main.css  tagger-tab.css
static/js/: ai-tab.js  app.js  comfyui-client.js  comfyui-editor.js  comfyui-workflow.js  feeder-tab.js  gallery-tab.js  generate-tab.js  i18n.js  image-edit-tab.js  json-highlight.js  metadata-tab.js  models-tab.js  (+6 more)
templates/: index.html
workflows/: ws_2d_pose_editor_to_Image_Edit( FireRed ).json  ws_3d_pose_editor_to_Image_Edit( Fire Red).json  ws_3d_pose_editor_to_Image_Edit( Flux2 Klein ).json  ws_dwpose_image_feeder.json  ws_sd15_t2i_basic.json  ws_sdxl_2d_pose_editor_i2i.json  ws_sdxl_3d pose editor_dwpose.json  ws_sdxl_dwpose.json  ws_sdxl_from_metadata_t2i.json  ws_sdxl_i2i_facedetailer.json  ws_sdxl_image_feeder_i2i.json  ws_sdxl_t2i_basic.json  ws_sdxl_t2i_facedetaller.json
(+11 files in other folders)
